--- a/demo/package.json
+++ b/demo/package.json
@@ -11,6 +11,9 @@
     "@next/mdx": "^8.1.0",
     "autoprefixer": "^10.2.1",
     "highlight.js": "^10.4.1",
+    "lodash.castarray": "^4.4.0",
+    "lodash.isplainobject": "^4.0.6",
+    "lodash.merge": "^4.6.2",
     "next": "^12.0.1",
     "postcss": "^8.2.3",
     "react": "^17.0.2",
