--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flowbite-typography",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Flowbite Typography is a plugin that lets you apply styles to all inline typography styles forked from the official Tailwind CSS plugin.",
   "main": "src/index.js",
   "files": [
@@ -41,16 +41,14 @@
     "prettier": "^2.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "tailwindcss": "^3.0.0-alpha.2"
+    "tailwindcss": "^3.0.0-alpha.2",
+    "@docsearch/react": "^3.2.0",
+    "@heroicons/react": "^1.0.6"
   },
   "dependencies": {
-    "@docsearch/react": "^3.2.0",
-    "@heroicons/react": "^1.0.6",
-    "i": "^0.3.7",
     "lodash.castarray": "^4.4.0",
     "lodash.isplainobject": "^4.0.6",
-    "lodash.merge": "^4.6.2",
-    "npm": "^8.15.1"
+    "lodash.merge": "^4.6.2"
   },
   "jest": {
     "setupFilesAfterEnv": [
